Revision history for BP-Schema-tools

{{$NEXT}}

v1.0.4  2019-11-15 18:30:30 CET
	- Added development dependency on OrePAN2.
	- Used Dist::Zilla::Plugin::Run for releases.

v1.0.3
	- Added support to relocating the master template through File::ShareDir
	  in the document generator.

v1.0.2
	- Switched to MakeMaker Dist::Milla backend

v1.0.1
	- Feature dependencies have been temporary promoted to dependencies,
	  so limitations in Menlo / cpanm / carton / cpm are avoided.

v1.00
	- Forked from https://github.com/inab/BP-Schema-tools.git
	- Initial release based on Dist::Milla.
